--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,10 @@
     --height-card: 510px;
 }
 
+h1 {
+    font-size: 1.5em;
+}
+
 body {
     background-color: var(--light-gray);
     font-family: "Outfit", sans-serif;
